--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.twitter.com/idoiacantolla" class="icon fa-twitter"><span class="label">@idoiacantolla</span></a></li>
+							<li><a href="https://www.twitter.com/adolflow" class="icon fa-twitter"><span class="label">@adolflow</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> <li><a href="https://www.github.com/flowsta" class="icon fa-github"><span class="label">@flowsta</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="mailto:idoialc [at] sindominio.net" class="icon fa-envelope"><span class="label">Correo</span></a></li>
+							<li><a href="mailto:adolflow [at] sindominio.net" class="icon fa-envelope"><span class="label">Correo</span></a></li>
 						</ul>
 
 				</div>
@@ -89,13 +89,13 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Helou, I'am <strong>idoiacantolla/strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
+								<h2 class="alt">Hi! I'm <strong>adolflow</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
 								guy designed for <a href="http://www.sindominio.net">SinDominio.net</a>.</h2>
-								<p>El peor enemigo de nuestras ideas es el que no las entiende.</p>
+								<p>La mejor respuesta ante una pregunta incómoda es sentarse bien</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Read more/a>
+								<a href="#portfolio" class="button scrolly">Passing by</a>
 							</footer>
 
 						</div>
@@ -112,7 +112,10 @@
 							<div id="cv33" style="height: 250px;"></div>
 
 							<p>Free Software, Open Data, Data Journalism.
-							  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+							  Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
+							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
+							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
+							fusce hendrerit lacus ridiculus.</p>
 <!--
 							<div class="row">
 								<div class="4u">
@@ -176,7 +179,12 @@
 <!-- <a href="#" class="image featured"><img src="images/pic08.jpg"
 alt="" /></a> -->
 
-							<p>TLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
+							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
+							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
+							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
+							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
+							ornare iaculis.</p>
 
 						</div>
 					</section>
@@ -189,7 +197,10 @@ alt="" /></a> -->
 							</header>
 							<div id="barras" style="height: 250px;"></div>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+							<p>Elementum sem parturient nulla quam placerat viverra
+							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
+							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
+							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
 						</div>
 					</section>
 					
@@ -201,7 +212,7 @@ alt="" /></a> -->
 						<div class="container">
 
 							<header>
-								<h2>Puedes contactar conmigo /h2>
+								<h2>Contacta</h2>
 							</header>
 							
 							<div id="lineas" style="height: 250px;"></div>
